# py_package_maker_cionzo

./: LICENSE  pyproject.toml  setup.py
src/py_package_maker_cionzo/: builder.py  packager.py
src/py_package_maker_cionzo/license/: __init__.py  license_manager.py
src/py_package_maker_cionzo/license/skeletons/: mit.txt
src/py_package_maker_cionzo/pyprojecttoml/: __main__.py  tomler.py
src/py_package_maker_cionzo/pyprojecttoml/skeleton/: _pyproject.toml
