[build-system]
requires = ["setuptools>=61.0", "pip", "twine", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "py_package_maker_cionzo"
version = "0.0.1"
authors = [
    { name="cionzo", email="cionzo@cionzo.cio" },
]
description = "Automates initialization, building, and sharing packages."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]

[project.urls]
"Homepage" = "https://github.com/cionz0/py_package_maker_cionzo"
"Bug Tracker" = "https://github.com/cionz0/py_package_maker_cionzo/issues"

[tool.setuptools.packages.find]
where = ["src"]